src/objects/Farm_Management_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Almacenamiento_de_cafe_adecuado__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Almacenamiento de café adecuado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Almacenamiento de café adecuado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Almacigo__c</fullName>
        <label>Almacigo</label>
        <picklist>
            <picklistValues>
                <fullName>Implementación plan de Almácigo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparación adecuada de sustratos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Beneficio__c</fullName>
        <label>Beneficio</label>
        <picklist>
            <picklistValues>
                <fullName>Lista de chequeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separación de café por lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separación de café por calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maquina despulpadora en buen estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zaranda en buen estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanques de fermenación en buen estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanques de desmucilaginadora buen estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canales de correteo en buen estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fosa de compostaje de pulpa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanque de tratamiento de agua miel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sistema de secado de café en buen estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empaques de café en buen estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almacenamiento de café adecuado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transporte adecuado</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Can_correteo_bn_est__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Canales de correteo en buen estado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Canales de correteo en buen estado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cantidad_Registros__c</fullName>
        <formula>IF(INCLUDES(  Registros__c, &apos;Registro de labores (Jornales)&apos;), 1, 0) + 
IF(INCLUDES(  Registros__c, &apos;Registro aplicación de pesticidas&apos;), 1, 0) + 
IF(INCLUDES(  Registros__c, &apos;Registro compra de insumos&apos;), 1, 0) + 
IF(INCLUDES(  Registros__c, &apos;Registro ventas Café Pergamino Seco (CPS)&apos;), 1, 0) + 
IF(INCLUDES(  Registros__c, &apos;Registro recolección&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cantidad Registros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacita_el_personal_en_manejo_de_agroqu__c</fullName>
        <formula>IF (  INCLUDES(Manejo_Plaguicidas__c, &apos;Capacita personal manejo de agroquimicos&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Capacita el personal en manejo de agroqu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conocimiento_de_areas_de_lotes__c</fullName>
        <formula>IF (  INCLUDES(Lotes__c, &apos;Conocimiento de áreas de lotes&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Conocimiento de áreas de lotes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conservacion_Suelos__c</fullName>
        <label>Conservacion Suelos</label>
        <picklist>
            <picklistValues>
                <fullName>Identificación de zonas erosionadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recuperación de zonas erosionadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reforestación con especies nativas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Control_Malezas__c</fullName>
        <label>Control Malezas</label>
        <picklist>
            <picklistValues>
                <fullName>Uso metodos reducción herbicidas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Control_de_acuerdo_al_resultado_del_moni__c</fullName>
        <formula>IF (  INCLUDES(MIPE__c, &apos;Control de acuerdo a resultado monitoreo&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Control de acuerdo al resultado del moni</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cosecha_Postcosecha__c</fullName>
        <label>Cosecha Postcosecha</label>
        <picklist>
            <picklistValues>
                <fullName>Registro de recolección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluación de recolección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inocuidad del beneficio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inocuidad bodegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluación del despulpado</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Empaq_cafe__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Empaques de café en buen estado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Empaques de café</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluacion_de_recoleccion__c</fullName>
        <formula>IF (  INCLUDES(Cosecha_Postcosecha__c, &apos;Evaluación de recolección&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Evaluación de recolección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluacion_del_despulpado__c</fullName>
        <formula>IF (  INCLUDES(Cosecha_Postcosecha__c, &apos;Evaluación del despulpado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Evaluación del despulpado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluacion_post_control__c</fullName>
        <formula>IF (  INCLUDES(MIPE__c, &apos;Evaluación post-control&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Evaluación post-control</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Name__c</fullName>
        <formula>Farm__r.farmName__c</formula>
        <label>Farm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Farm</label>
        <referenceTo>CBL_Farm__c</referenceTo>
        <relationshipName>Farm_Management_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farmer_Name__c</fullName>
        <formula>Farm__r.Farmer__r.Contact__r.Contact_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Farmer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_definicion_metas__c</fullName>
        <label>Fecha definicion metas</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fosa_comp__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Fosa de compostaje de pulpa&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Fosa de compostaje de pulpa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gestion_Ambiental__c</fullName>
        <label>Gestion Ambiental</label>
        <picklist>
            <picklistValues>
                <fullName>Manejo de aguas residuales (hogar/benef)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo alternativo para aguas beneficio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformación pulpas uso en cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan de conserv. y recuper. flora/fauna</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Identificacion_de_zonas_erosionadas__c</fullName>
        <formula>IF (  INCLUDES(Conservacion_Suelos__c, &apos;Identificación de zonas erosionadas&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Identificación de zonas erosionadas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementaci_n_de_Plan_de_Consevacion__c</fullName>
        <formula>IF (  INCLUDES(Gestion_Ambiental__c, &apos;Plan de conserv. y recuper. flora/fauna&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Implementación de Plan de Consevación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implemetacion_de_Plan_Almacigo__c</fullName>
        <formula>IF (  INCLUDES(Almacigo__c, &apos;Implementación plan de Almácigo&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Implemetación de Plan Almacigo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inocuidad_bodegas__c</fullName>
        <formula>IF (  INCLUDES(Cosecha_Postcosecha__c, &apos;Inocuidad bodegas&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Inocuidad bodegas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inocuidad_del_beneficio__c</fullName>
        <formula>IF (  INCLUDES(Cosecha_Postcosecha__c, &apos;Inocuidad del beneficio&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Inocuidad del beneficio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lista_cheq__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Lista de chequeo&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Lista de chequeo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lotes__c</fullName>
        <label>Lotes</label>
        <picklist>
            <picklistValues>
                <fullName>Mapa de la finca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conocimiento de áreas de lotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro arboles y variedades por lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro de labores por lote</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MIPE__c</fullName>
        <label>MIPE</label>
        <picklist>
            <picklistValues>
                <fullName>Registro de monitoreo de PyE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realización de monitoreo de PyE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control de acuerdo a resultado monitoreo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluación post-control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso de metodos de control para PyE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Manejo_Plaguicidas__c</fullName>
        <label>Manejo Plaguicidas</label>
        <picklist>
            <picklistValues>
                <fullName>Posee equipos de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usa equipos de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registra las aplicaciones (agroquimicos)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacita personal manejo de agroquimicos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Manejo_Sombra__c</fullName>
        <label>Manejo Sombra</label>
        <picklist>
            <picklistValues>
                <fullName>Uso de especies nativas como sombrio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulación de sombra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Manejo_alternativo_para_aguas_de_benefic__c</fullName>
        <formula>IF (  INCLUDES(Gestion_Ambiental__c, &apos;Manejo alternativo para aguas beneficio&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Manejo alternativo para aguas de benefic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manejo_de_aguas_residuales_hogar_benefi__c</fullName>
        <formula>IF (  INCLUDES(Gestion_Ambiental__c, &apos;Manejo de aguas residuales (hogar/benef)&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Manejo de aguas residuales (hogar/benefi</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapa_de_la_finca__c</fullName>
        <formula>IF (  INCLUDES(Lotes__c, &apos;Mapa de la finca&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Mapa de la finca</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maq_desp_bn_est__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Maquina despulpadora en buen estado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Maquina despulpadora en buen estado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nucleo__c</fullName>
        <formula>Farm__r.Baseline__r.Farmer__r.District__c</formula>
        <label>Nucleo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posee_equipos_de_proteccion__c</fullName>
        <formula>IF (  INCLUDES(Manejo_Plaguicidas__c, &apos;Posee equipos de protección&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Posee equipos de protección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preparacion_adecuada_de_sustratos__c</fullName>
        <formula>IF (  INCLUDES(Almacigo__c, &apos;Preparación adecuada de sustratos&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Preparación adecuada de sustratos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productor__c</fullName>
        <formula>Farm__r.Baseline__r.Farmer__r.Contact__r.Contact_Full_Name__c</formula>
        <label>Productor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realizacion_de_monitoreo_de_Plagas_y_enf__c</fullName>
        <formula>IF (  INCLUDES(MIPE__c, &apos;Realización de monitoreo de PyE&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Realización de monitoreo de Plagas y enf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recuperacion_de_zonas_erosionadas__c</fullName>
        <formula>IF (  INCLUDES(Conservacion_Suelos__c, &apos;Recuperación de zonas erosionadas&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Recuperación de zonas erosionadas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reforestacion_con_especies_nativas__c</fullName>
        <formula>IF (  INCLUDES(Conservacion_Suelos__c, &apos;Reforestación con especies nativas&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Reforestación con especies nativas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registra_las_aplicaciones_agroquimicos__c</fullName>
        <formula>IF (  INCLUDES(Manejo_Plaguicidas__c, &apos;Registra las aplicaciones (agroquimicos)&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registra las aplicaciones (agroquimicos)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_aplicacion_de_pesticidas__c</fullName>
        <formula>IF (  INCLUDES(Registros__c, &apos;Registro aplicación de pesticidas&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registro aplicación de pesticidas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_compra_de_insumos__c</fullName>
        <formula>IF (  INCLUDES(Registros__c, &apos;Registro compra de insumos&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registro compra de insumos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_de_arboles_y_variedades_por_lot__c</fullName>
        <formula>IF (  INCLUDES(Lotes__c, &apos;Registro arboles y variedades por lote&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registro de arboles y variedades por lot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_de_labores_Jornales__c</fullName>
        <formula>IF (  INCLUDES(Registros__c, &apos;Registro de labores (Jornales)&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registro de labores (Jornales)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_de_labores_por_lote__c</fullName>
        <formula>IF (  INCLUDES(Lotes__c, &apos;Registro de labores por lote&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registro de labores por lote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_de_monitoreo_de_Plagas_y_Enferm__c</fullName>
        <formula>IF (  INCLUDES(MIPE__c, &apos;Registro de monitoreo de PyE&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registro de monitoreo de Plagas y Enferm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_de_recoleccion__c</fullName>
        <formula>IF (  INCLUDES(Cosecha_Postcosecha__c, &apos;Registro de recolección&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registro de recolección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_recoleccion__c</fullName>
        <formula>IF (  INCLUDES(Registros__c, &apos;Registro recolección&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registro recolección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_ventas_Cafe_Pergamino_Seco_CPS__c</fullName>
        <formula>IF (  INCLUDES(Registros__c, &apos;Registro ventas Café Pergamino Seco CPS&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Registro ventas Café Pergamino Seco (CPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registros__c</fullName>
        <label>Registros</label>
        <picklist>
            <picklistValues>
                <fullName>Registro de labores (Jornales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro aplicación de pesticidas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro compra de insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro ventas Café Pergamino Seco CPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro recolección</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regulacion_de_sombra__c</fullName>
        <formula>IF (  INCLUDES(Manejo_Sombra__c, &apos;Regulación de sombra&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Regulación de sombra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sep_cafe_calidad__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Separación de café por calidad&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Separación de café por calidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sep_cafe_lote__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Separación de café por lote&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Separación de café por lote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sist_secado__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Sistema de secado de café en buen estado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Sistema de secado de café en buen estado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tanq_desm_bn_est__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Tanques de desmucilaginadora buen estado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Tanques de desmucilaginadora buen estado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tanq_ferm_bn_est__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Tanques de fermenación en buen estado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Tanques de fermenación en buen estado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tanq_trat_aguamiel__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Tanque de tratamiento de agua miel&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Tanque de tratamiento de agua miel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transformacion_de_pulpas__c</fullName>
        <formula>IF (  INCLUDES(Gestion_Ambiental__c, &apos;Transformación pulpas uso en cultivo&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Transformación de pulpas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporte_adecuado__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Transporte adecuado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Transporte adecuado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usa_equipos_de_proteccion__c</fullName>
        <formula>IF (  INCLUDES(Manejo_Plaguicidas__c, &apos;Usa equipos de protección&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Usa equipos de protección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uso_de_especies_nativas_como_sombrio__c</fullName>
        <formula>IF (  INCLUDES(Manejo_Sombra__c, &apos;Uso de especies nativas como sombrio&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Uso de especies nativas como sombrio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uso_de_metodos_amigables_para_reducci_n__c</fullName>
        <formula>IF (  INCLUDES(Control_Malezas__c, &apos;Uso metodos reducción herbicidas&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Uso de metodos amigables para reducción</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uso_de_metodos_de_control_para_PyE__c</fullName>
        <formula>IF (  INCLUDES(MIPE__c, &apos;Uso de metodos de control para PyE&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Uso de metodos de control para PyE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Año</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zaranda_bn_est__c</fullName>
        <formula>IF (  INCLUDES(Beneficio__c, &apos;Zaranda en buen estado&apos;) , &apos;Sí&apos;, &apos;No&apos;)</formula>
        <label>Zaranda en buen estado</label>
        <type>Text</type>
    </fields>
    <label>Plan de Manejo de Finca</label>
    <nameField>
        <displayFormat>FMP{0000000}</displayFormat>
        <label>Farm Management Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Farm Management Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>